--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="/tarea05/index.html">Tarea 05</a></li>
                 <li><a href="/tarea06/index.html">Tarea 06</a></li>
                 <li><a href="/evp2/index.html">EvP02</a></li>
-                <li><a href="/Parcial/index.html">Examen Parcial</a></li>
+                <li><a href="Parcial.github.io/index.html">Examen Parcial</a></li>
                 <li><a href="#">Tarea 09</a></li>
                 <li><a href="#">Tarea 10</a></li>
                 <li><a href="#">Tarea 11</a></li>
