--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="personal">
             <h1>Dan Davis Fernández Flores</h1>
             <img src="img/FotoDan.jpg" alt="EDR">
-            <p>Hola, soy alumno del curso Desarrollo Web</p>
+            <p>Hola, soy un alumno del curso Desarrollo Web</p>
         </div>
         
         <div id="tareas">
